deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blogarchive
  labels:
    app: blogarchive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blogarchive
  template:
    metadata:
      labels:
        app: blogarchive
    spec:
      containers:
      - name: blogarchive
        image: telliottio/blogarchive:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blogarchive
spec:
  type: NodePort
  selector:
    app: blogarchive
  ports:
  - name: http
    targetPort: 80
    port: 80
